@@ -252,6 +252,8 @@ TopLeftY=7
 # use ASC symbols for icons & bars [default: no; legal, yes, no]
 UseACS=no
 
+# draw Border [default: yes; legal: yes, no]
+DrawBorder=yes
 
 
 ## Cwlinux driver ##
